@@ -2,4 +2,5 @@ Makefile
 Makefile.in
 schroot
 schroot.dox
+schroot.log
 schroot-stamp
